# wather_fastapi

./: .dockerignore  README.md  docker-compose.yml  pyproject.toml
api/: api.py  exceptions.py  main.py
api/models/: base.py  v1_response.py  weather.py
api/routes/: health.py  weather.py
api/services/: weather.py
tests/api/routes/: test_health_routes.py
